# camp_final_program

./: .gitignore  split.py  结营项目.md
camera/: CMakeLists.txt  camera.cpp
yolo11/: data.yaml  detect&track.py  train.py  结营项目笔记.md
yolo11/ros2_ws/: .gitignore
yolo11/ros2_ws/src/: publisher.py  visualize.py  visualize3d.py
yolo11/ros2_ws/src/ball_coord_sub/: CMakeLists.txt  package.xml
yolo11/ros2_ws/src/ball_coord_sub/kmfilter/: CMakeLists.txt  KF.cpp  KF.hpp
yolo11/ros2_ws/src/ball_coord_sub/src/: camera_calibration.json  subscriber.cpp
